Parallel Multihead Attn implemented

--- a/Language_Modelling.ipynb
+++ b/Language_Modelling.ipynb
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1320,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1626,7 +1626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1636,7 +1636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1645,16 +1645,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\lyuch\\AppData\\Local\\Temp\\ipykernel_16940\\2544158094.py:1: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  ckpt = torch.load(path_to_trained_model, map_location=device) # remove map location if using GPU\n"
+     ]
+    }
+   ],
    "source": [
     "ckpt = torch.load(path_to_trained_model, map_location=device) # remove map location if using GPU"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1667,9 +1676,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Load model from checkpoint\n",
     "model = MiniGPT(MiniGPTConfig)\n",
@@ -1678,7 +1698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1687,9 +1707,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating text starting with: torch.Size([4])\n",
+      "Once upon a time, there was a little girl named Lily. She had a pretty dress and a hat. And that's how kind you prunes. And I can't talk like you. Come on, let's go home now.\" Other children joined in. They ran and jumped on best friends.Once upon a time, there was a baby who tried to relax and gaze at the flowers and make them beautiful.Once upon a time, there was an elderly man who lived on the other side of the park. They learned that it's important to be humble and kind to her friends. Lily felt proud of herself too. And she quietly got out and pecked at the carpet and laughed. Spot liked to play on the swings and the slide. They started running and bending. She felt like a real king, Amy, and her mom said it was time to end. The boy had done his homework and enjoyed his nap. From that day on, Lucy was very happy.\n",
+      "At the party, Mia\n"
+     ]
+    }
+   ],
    "source": [
     "model.to(device)\n",
     "gen_sent = \"Once upon a time\"\n",
@@ -1721,7 +1751,52 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Optimizing Multi-Head Self Attention (7× Speedup on local machine)\n",
+    "\n",
+    "In the standard `MultiHeadAttention` implementation, we loop over `H` attention heads and apply `SingleHeadAttention` **sequentially**—each operating on a projected subspace of dimension `head_dim`. While conceptually straightforward, this method is computationally inefficient due to redundant operations and lack of parallelism.\n",
+    "\n",
+    "To address this, I implemented an optimized version, **`ParallelMHA`**, which computes multi-head attention **in parallel** using efficient tensor operations.\n",
+    "\n",
+    "\n",
+    "#### Notation\n",
+    "\n",
+    "**B**: batch size  \n",
+    "**N**: context length  \n",
+    "**H**: number of heads  \n",
+    "**head_dim_kq**: `output_key_query_dim // H`  \n",
+    "**head_dim_v**: `output_value_dim // H`\n",
+    "Since output_key_query_dim = output_value_dim, **head_dim** = `key_query_val_dim // num_heads`\n",
+    "\n",
+    "\n",
+    "#### `ParallelMHA` class\n",
+    "\n",
+    "1. **Unified Projection**  \n",
+    "   Project the input tensor `(B, N, input_dim)` into query, key, and value matrices using a single `Linear` layer:  \n",
+    "   Output shape: `(B, N, key_query_val_dim)`\n",
+    "\n",
+    "2. **Reshape for Multi-Head**  \n",
+    "   Split the projected tensors across heads and reshape:  \n",
+    "   `q, k → (B, N, H, head_dim_kq)`  \n",
+    "   `v → (B, N, H, head_dim_v)`\n",
+    "   Transpose the tensor dimensions into: \n",
+    "   `(B, H, N, head_dim_kq)`\n",
+    "   `(B, H, N, head_dim_v)`\n",
+    "\n",
+    "3. **Efficient Attention Computation**  \n",
+    "   Compute attention scores via `q @ kᵀ`: `(B, H, N, N)` \n",
+    "   Apply parallelized softmax over the last dimension, across the first two dimensions B and H. \n",
+    "\n",
+    "4. **Weighted Sum and Merge**  \n",
+    "   Compute attention output: `attn_probs @ v → (B, H, N, head_dim_v)`\n",
+    "   Transpose and reshape to combine heads:  \n",
+    "     Final shape: `(B, N, output_value_dim)`\n",
+    "\n",
+    "This approach calculates the attention across each head simultaneously in one run.\n",
+    "- **Performance**: ~7× speedup on my RTX 4060 compared to default implementation\n",
+    "- **Configurable**:  \n",
+    "  `config.py` includes a `parallelHeads` flag to toggle between the default `MultiHeadAttention` and the optimized `ParallelMHA`.\n"
+   ]
   }
  ],
  "metadata": {
